<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.revotech.qpons.activity.LogIn_Activity"
   android:background="@color/colorDivider"
    android:orientation="vertical"

    tools:showIn="@layout/activity_log_in_">

    <RelativeLayout

        android:id="@+id/realLayout_facebook"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--  <com.facebook.login.widget.LoginButton
              android:id="@+id/login_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerInParent="true"
              android:padding="@dimen/ten_margin"
              />
  -->
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/realLayout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ImageButton
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_above="@+id/layout_one"
        android:layout_gravity="center"
        android:background="@mipmap/logo_white"
        android:layout_width="85dp"
        android:layout_height="85dp" />

    <LinearLayout
        android:paddingTop="@dimen/five_margin"
        android:id="@+id/layout_one"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
  <TextView
      android:padding="@dimen/ten_margin"
      android:textSize="16sp"
      android:textStyle="bold"
      android:textColor="@color/colorSecondBLKText"
      android:gravity="center"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Please Log In"
      />

    <EditText
        android:id="@+id/ed_login_name"
        android:layout_margin="@dimen/ten_margin"
        android:hint="@string/user_name"
        android:padding="@dimen/ten_margin"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/ed_login_email"
        android:background="@color/colorAccent"
        android:layout_margin="@dimen/ten_margin"
        android:padding="@dimen/ten_margin"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <EditText
            android:inputType="number"
            android:id="@+id/ed_login_phonenumber"
            android:background="@color/colorAccent"
            android:layout_margin="@dimen/ten_margin"
            android:padding="@dimen/ten_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_no"/>
        <Button
            android:id="@+id/button_login"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimary"
            android:text="@string/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:padding="@dimen/twenty_margin"/>
    </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
